fea-rs/test-data/parse-tests/bad/tag_mismatch.fea
feature size {
  pos A B 20;
} Size;
